# derpv2

./: .gitignore
desktop/: CMakeLists.txt  resources.qrc  run.ps1
desktop/src/: todos.md
desktop/src/interfaces/: DBaseModule.h  DCore.h  DModule.h
desktop/src/kernel/: Kernel.cpp  Kernel.h  main.cpp
desktop/src/kernel/controllers/: ServerManager.cpp  ServerManager.h
desktop/src/kernel/managers/: InputManager.cpp  InputManager.h  NetworkManager.cpp  NetworkManager.h  PluginManager.cpp  PluginManager.h
desktop/src/kernel/ui/: CommandPalette.cpp  CommandPalette.h  LoginDialog.cpp  LoginDialog.h  SetupWizard.cpp  SetupWizard.h  UIManager.cpp  UIManager.h
desktop/src/plugins/dashboard_plugin/: DashboardPlugin.cpp  DashboardPlugin.h  manifest.json
desktop/src/plugins/dummy_plugin/: DummyPlugin.cpp  DummyPlugin.h  manifest.json
desktop/src/plugins/staff_manager/: StaffManager.cpp  StaffManager.h  manifest.json
desktop/src/resources/: command_palette.qss  style.qss
server/: go.mod  go.sum
server/cmd/server/: main.go
server/internal/database/: db.go
server/internal/handlers/: discovery.go  intents.go  login.go  permissions.go  ping.go  setup.go  staff.go  user.go
server/internal/models/: models.go
